fixed background on iphone media query

--- a/style.css
+++ b/style.css
@@ -280,6 +280,15 @@ a.fa-linkedin-square {
     color: #6a4088
 }
 
+
+
+
+
+
+
+
+
+
 /* Iphone X */
 @media screen and (max-width: 375px) {
 
@@ -287,7 +296,7 @@ a.fa-linkedin-square {
         background-image: url("./assets/images/golfCourse.jpeg");
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: 100%;
+        background-size: 1350px;
         width: 375px;
         
     }
@@ -311,7 +320,7 @@ a.fa-linkedin-square {
     }
 
     .portfolio-image {
-        margin-left: 15px;
+        margin-left: 110px;
     }
 
     .txt-rotate {
